--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "core-js": "^3.8.3",
     "eslint-plugin-vitest": "^0.5.4",
     "vitest": "^3.0.5",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
